Fix border colors in docs dark mode
Fixes #10266

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -265,8 +265,6 @@ th, td
 
 @require 'mobile.styl'
 
-
-
 @media (prefers-color-scheme: dark)
   html, body
     color #b3c4cc !important;
@@ -309,3 +307,11 @@ th, td
     .custom-block.tip, div[class*="language-"], .theme-default-content code
       background-color #2d3a41 !important;
       color #b3c4cc !important;
+
+    .panel
+      border 2px solid #2e3f47 !important
+
+    .header
+      .text
+        h1, h2, h3, h4, h5
+          color #fff !important
